infra/k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server-ingress
  namespace: proseed
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - proseednow.com
      secretName: api-server-tls
  rules:
    - host: proseednow.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: api-server
                port:
                  number: 4000
